# beng202_W24_project

./: .gitignore  README.md  pyproject.toml
mlst_aligner/: aligner.py  cli.py  mlst.py  scoring.py  utils.py
tests/: test_aligner.py  test_scoring.py  test_utils.py
tests/data/: mlsts.fasta  mlsts.fasta.fai  mlsts.txt  mlsts_random.fasta  mlsts_st10.fasta  raw_reads_st73_subset_1000.fasta  raw_reads_st73_subset_1000.fasta.fai  raw_reads_st73_subset_10000.fasta  raw_reads_st73_subset_3000.fasta
